Add check cookies for superadmin pages
